--- a/catalog.html
+++ b/catalog.html
@@ -27,12 +27,13 @@
           <li class='site-navigation-item'><a href='about-company.html' class='link main-menu'>О Компании</a></li>
         </ul>
         <div class='user-navigation'>
-          <div class='search-logo user-navigation-item'>
+          <div class='search-logo user-navigation-item' tabindex='0'>
             <form class='search-form' action='https://echo.htmlacademy.ru' method='get'>
-              <input type='search' class='search-field' name='search' placeholder='Что ищем?' required>
+              <label for='search' class='visually-hidden'>Поиск</label>
+              <input type='search' class='search-field' name='search' placeholder='Что ищем?' id='search' required>
             </form>
           </div>
-          <div class='login-link link user-navigation-item'>Вход
+          <div class='login-link link user-navigation-item' tabindex='0'>Вход
             <form class='login-form' action='https://echo.htmlacademy.ru' method='post'>
               <ul class='login-window'>
                 <li class='login-field'>
@@ -53,7 +54,7 @@
               </ul>
             </form>
           </div>
-          <div class='inner-page-basket basket link user-navigation-item'>2 товара
+          <div class='inner-page-basket basket link user-navigation-item' tabindex='0'>2 товара
             <div class='basket-table'>
               <table>
                 <tr>
@@ -308,10 +309,18 @@
     </main>
     <footer class='inner-page main-footer container'>
       <ul class='social-list'>
-        <li><a class='social-button twitter link' href='#' aria-label='Твиттер'></a></li>
-        <li><a class='social-button instagram link' href='#' aria-label='Инстаграм'></a></li>
-        <li><a class='social-button facebook link' href='#' aria-label='Фэйсбук'></a></li>
-        <li><a class='social-button vk link' href='#' aria-label='В контакте'></a></li>
+        <li>
+          <a class='social-button twitter link' href='#' aria-label='Твиттер'><span class='visually-hidden'>Twitter</span></a>
+        </li>
+        <li>
+          <a class='social-button instagram link' href='#' aria-label='Инстаграм'><span class='visually-hidden'>Instagram</span></a>
+        </li>
+        <li>
+          <a class='social-button facebook link' href='#' aria-label='Фэйсбук'><span class='visually-hidden'>Facebook</span></a>
+        </li>
+        <li>
+          <a class='social-button vk link' href='#' aria-label='В контакте'><span class='visually-hidden'>Вконтакте</span></a>
+        </li>
       </ul>
       <ul class='additional-list'>
         <li><a class='for-providers link' href='#'>Для поставщиков</a></li>
